Load times and prices to the same sturct

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,7 +22,8 @@
             "command": "./bot_simulator",
             "dependsOn": [
                 "Compile and Run C++"
-            ]
+            ],
+            "problemMatcher": []
         },
         {
             "label": "Build with CMake",
