Add minor corrections. Add GodBolt page for quick testing.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,6 +5,7 @@
             "label": "Run C++ Program",
             "type": "shell",
             "command": "./build/src/TBotSimulator",
+            "problemMatcher": []
         },
         {
             "label": "Build with CMake",
