--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,7 +12,7 @@
             "type": "shell",
             "command": [
                 "rm ./build -r -force;",
-                "mkdir build; cd build; cmake .. -G 'MinGW Makefiles'; cmake --build ."
+                "mkdir build; cd build; cmake .. -DCMAKE_BUILD_TYPE=Debug -G 'MinGW Makefiles'; cmake --build ."
             ],
             "group": {
                 "kind": "build",
