Update csv file path. Partially solve actions.size() problem.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCES
 
 # Create the main executable
 add_executable(TBotSimulator ${SOURCES} ../main.cpp)
+target_compile_options(TBotSimulator PRIVATE -g)
 
 # Include headers
 target_include_directories(TBotSimulator PRIVATE ../headers)
