--- a/python scripts/media_tracker/config.env
+++ b/python scripts/media_tracker/config.env
@@ -1,12 +1,12 @@
 # Email SMTP (przykład Gmail: app password required)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
-SMTP_USER=twoj.email@gmail.com
-SMTP_PASS=YOUR_SMTP_PASSWORD
+SMTP_USER=nemezis.wma@gmail.com
+SMTP_PASS=awrcnhldrzyazyil
 
 # Powiadomienie - adres docelowy
-ALERT_TO=docelowy.email@domena.com
-ALERT_FROM=twoj.email@gmail.com
+ALERT_TO=nemezis.wma@gmail.com
+ALERT_FROM=nemezis.wma@gmail.com
 
 # Interwał w sekundach (np. 300 = 5 minut)
 POLL_INTERVAL=300
